Removed consul and all dependent methods
